# search_offsets

./: .gitignore  LICENSE  README.md  defaults.yaml  fn_byte_patterns.ffsess  pyproject.toml
.github/: dependabot.yml
.github/workflows/: tests.yml
search_offsets/: config.py  detect_df_version.py  detect_steam_api.py  patterns.py  render_template.py  search.py
search_offsets/templates/: linux_offsets.toml.jinja  offsets.toml.jinja  offsets_template.toml  windows_offsets.toml.jinja
tests/: test_detect_df_version.py  test_patterns.py
