[project]
name = "search-offsets"
version = "0.1.0"
requires-python = ">=3.10"

[tool.poetry]
name = "search-offsets"
version = "0.1.0"
description = ""
authors = ["insolor <insolor@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "search_offsets"}]

[tool.poetry.dependencies]
python = "^3.10"
more-itertools = "^10.5.0"
loguru = "^0.7.3"
omegaconf = "^2.3.0"
jinja2 = "^3.1.5"
rich = "^13.9.4"
lief = "^0.16.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.2"
pytest = "^8.3.5"
hypothesis = "^6.130.6"

[tool.poetry.scripts]
search = "search_offsets.search:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "T201",  # `print` found
    "S101",  # Use of assert detected
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D200",  # One-line docstring should fit on one line
    "D212",  # Multi-line docstring summary should start at the first line
    "D401",  # First line should be in imperative mood
]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",  # Don't warn about using of asserts in tests
    "ANN201",  # Ignore "Missing return type annotation for public function", tests don't return anything
    "D",  # Don't warn about missing documentation in tests
]
