[project]
name = "search-offsets"
version = "0.1.0"
description = ""
authors = [{ name = "insolor", email = "insolor@gmail.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
dependencies = [
    "more-itertools>=10.7.0,<11",
    "loguru>=0.7.3,<0.8",
    "omegaconf>=2.3.0,<3",
    "jinja2>=3.1.6,<4",
    "rich>=14.0.0,<15",
    "lief>=0.16.6,<0.17",
]

[project.scripts]
search = "search_offsets.search:main"

[dependency-groups]
dev = [
    "ruff>=0.12.1,<0.13",
    "pytest>=8.4.1,<9",
    "hypothesis>=6.135.20,<7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "T201",  # `print` found
    "S101",  # Use of assert detected
    "D100",  # Missing docstring in public module
    "D101",
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D200",  # One-line docstring should fit on one line
    "D212",  # Multi-line docstring summary should start at the first line
    "D401",  # First line should be in imperative mood
    "PLR0911",
]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",  # Don't warn about using of asserts in tests
    "ANN201",  # Ignore "Missing return type annotation for public function", tests don't return anything
    "D",  # Don't warn about missing documentation in tests
]
